--- a/index.html
+++ b/index.html
@@ -1,344 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Septic System Pro Estimator</title>
-    <style>
-        body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
-        h1, h2 { text-align: center; }
-        .container {
-            background: white; padding: 20px; max-width: 900px; margin: auto;
-            border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        label { display: block; margin-top: 10px; font-weight: bold; }
-        input, select {
-            width: 100%; padding: 8px; margin-top: 5px;
-            border-radius: 4px; border: 1px solid #ccc;
-        }
-        .row { display: flex; gap: 10px; }
-        .row > div { flex: 1; }
-        .buttons button {
-            padding: 10px; margin: 5px 3px; border: none; border-radius: 4px;
-            cursor: pointer; color: white;
-        }
-        .calculate { background: #2c7be5; }
-        .verbal { background: #fd7e14; }
-        .save { background: #28a745; }
-        .print { background: #6f42c1; }
-        .buttons button:hover { opacity: 0.9; }
-        .results {
-            margin-top: 20px; background: #e9f5ff; padding: 15px; border-radius: 6px;
-        }
-        .total { font-size: 22px; font-weight: bold; color: #0a5; }
-        #proposal { display: none; background: white; padding: 20px; margin-top: 20px; }
-        #photoPreview img { max-width: 150px; margin: 5px; border-radius: 4px; }
-        hr { margin: 20px 0; }
-    </style>
+<meta charset="UTF-8">
+<title>Septic System Pro Estimator</title>
+
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background: #0b0b0b;
+    color: #ffffff;
+    padding: 15px;
+}
+
+h1, h2 {
+    text-align: center;
+    color: #ffffff;
+}
+
+.container {
+    background: #111111;
+    border: 2px solid #facc15;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 900px;
+    margin: auto;
+    box-shadow: 0 0 20px rgba(250, 204, 21, 0.25);
+}
+
+label {
+    display: block;
+    margin-top: 12px;
+    font-weight: bold;
+    color: #facc15;
+}
+
+input, select {
+    width: 100%;
+    padding: 12px;
+    margin-top: 6px;
+    border-radius: 6px;
+    border: 1px solid #facc15;
+    background: #000000;
+    color: #ffffff;
+    font-size: 18px;
+}
+
+input:focus, select:focus {
+    outline: none;
+    border-color: #fde047;
+    box-shadow: 0 0 0 2px rgba(250, 204, 21, 0.4);
+}
+
+.row {
+    display: flex;
+    gap: 10px;
+}
+
+.row > div {
+    flex: 1;
+}
+
+hr {
+    margin: 28px 0;
+    border: none;
+    border-top: 1px solid #facc15;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 20px;
+}
+
+.buttons button {
+    padding: 18px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    color: #000;
+    font-weight: bold;
+    font-size: 20px;
+    width: 100%;
+}
+
+.calculate { background: #facc15; }
+.verbal { background: #fb923c; }
+
+.buttons button:hover {
+    filter: brightness(1.1);
+}
+
+.total {
+    font-size: 30px;
+    font-weight: bold;
+    color: #4ade80;
+    text-align: center;
+    margin-top: 25px;
+}
+
+input[type="checkbox"] {
+    width: auto;
+    transform: scale(1.5);
+    margin-right: 10px;
+}
+
+/* MOBILE FIELD OPTIMIZATION */
+@media (max-width: 768px) {
+    body { padding: 8px; }
+    .container { padding: 15px; }
+    h1 { font-size: 24px; }
+    h2 { font-size: 20px; margin-top: 20px; }
+}
+</style>
 </head>
+
 <body>
 
+<div class="container">
 <h1>Septic System Pro Estimator</h1>
 
-<div class="container">
-
-    <h2>Job Info</h2>
-    <div class="row">
-        <div>
-            <label>Customer Name</label>
-            <input type="text" id="customerName">
-        </div>
-        <div>
-            <label>Job #</label>
-            <input type="text" id="jobNumber">
-        </div>
+<h2>Job Info</h2>
+<div class="row">
+    <div>
+        <label>Customer Name</label>
+        <input type="text" id="customerName">
     </div>
-
-    <label>Job Location</label>
-    <input type="text" id="jobLocation">
-
-    <hr>
-
-    <h2>Site Photos (Saved with Job)</h2>
-    <input type="file" id="photoUpload" multiple accept="image/*">
-    <div id="photoPreview"></div>
-
-    <hr>
-
-    <h2>System Details</h2>
-    <div class="row">
-        <div>
-            <label>Tank Cost ($)</label>
-            <input type="number" id="tankCost">
-        </div>
-        <div>
-            <label>Field Line Length (ft)</label>
-            <input type="number" id="fieldLength">
-        </div>
+    <div>
+        <label>Job #</label>
+        <input type="text" id="jobNumber">
     </div>
-
-    <div class="row">
-        <div>
-            <label>Trench Width (ft)</label>
-            <input type="number" id="trenchWidth">
-        </div>
-        <div>
-            <label>Trench Depth (ft)</label>
-            <input type="number" id="trenchDepth">
-        </div>
-    </div>
-
-    <div class="row">
-        <div>
-            <label>Pipe $ / ft</label>
-            <input type="number" id="pipeCostPerFoot">
-        </div>
-        <div>
-            <label>Gravel $ / yard</label>
-            <input type="number" id="gravelCostPerYard">
-        </div>
-    </div>
-
-    <hr>
-
-    <h2>Site Conditions (1 Man + 1 Machine / 4 Day Jobs)</h2>
-
-    <label>Base Complexity</label>
-    <select id="complexity" onchange="updateLaborEquipmentCost()">
-        <option value="simple">Simple</option>
-        <option value="moderate">Moderate</option>
-        <option value="difficult">Difficult</option>
-        <option value="extreme">Extreme</option>
-    </select>
-
-    <label>Access / Soil</label>
-    <select id="accessCondition" onchange="updateLaborEquipmentCost()">
-        <option value="normal">Normal</option>
-        <option value="tight">Tight Access</option>
-        <option value="wet">Wet / Groundwater</option>
-        <option value="both">Tight + Wet</option>
-    </select>
-
-    <label>
-        <input type="checkbox" id="inspectionHold" onchange="updateLaborEquipmentCost()">
-        Inspection Hold / Finish Day (Skid Steer Staged)
-    </label>
-
-    <hr>
-
-    <h2>Tree Clearing (You Do It)</h2>
-    <div class="row">
-        <div>
-            <label>Tree Count</label>
-            <input type="number" id="treeCount" oninput="updateLaborEquipmentCost()">
-        </div>
-        <div>
-            <label>Tree Size</label>
-            <select id="treeSize" onchange="updateLaborEquipmentCost()">
-                <option value="small">6–12"</option>
-                <option value="medium">12–24"</option>
-                <option value="large">24"+</option>
-            </select>
-        </div>
-    </div>
-
-    <hr>
-
-    <h2>Rock (Hauled In)</h2>
-    <div class="row">
-        <div>
-            <label>Rock Tons</label>
-            <input type="number" id="rockTons" oninput="updateLaborEquipmentCost()">
-        </div>
-        <div>
-            <label>Cost per Ton ($)</label>
-            <input type="number" id="rockCostPerTon" value="17" oninput="updateLaborEquipmentCost()">
-        </div>
-    </div>
-
-    <div class="row">
-        <div>
-            <label>Haul Distance (miles one way)</label>
-            <input type="number" id="haulDistance" oninput="updateLaborEquipmentCost()">
-        </div>
-        <div>
-            <label>Haul $ / Mile (Tri-Axle)</label>
-            <input type="number" id="haulCostPerMile" value="7" oninput="updateLaborEquipmentCost()">
-        </div>
-    </div>
-
-    <hr>
-
-    <h2>Labor + Equipment</h2>
-    <label>Labor + Equipment Cost ($)</label>
-    <input type="number" id="laborEquipmentCost">
-
-    <label>Markup %</label>
-    <input type="number" id="markup" value="20">
-
-    <div class="buttons">
-        <button class="calculate" onclick="calculateEstimate()">Calculate Quote</button>
-        <button class="verbal" onclick="showVerbalQuote()">Verbal Quote</button>
-        <button class="save" onclick="saveQuote()">Save Job</button>
-        <button class="print" onclick="printProposal()">Print Proposal</button>
-    </div>
-
-    <div class="results" id="results" style="display:none;">
-        <p id="breakdown"></p>
-        <p class="total" id="totalResult"></p>
-        <p id="verbalResult" style="font-weight:bold;color:#fd7e14;"></p>
-    </div>
-
 </div>
 
-<div id="proposal"></div>
+<label>Job Location</label>
+<input type="text" id="jobLocation">
+
+<hr>
+
+<h2>System Details</h2>
+
+<div class="row">
+    <div>
+        <label>Tank Cost ($)</label>
+        <input type="number" id="tankCost" value="1200">
+    </div>
+    <div>
+        <label>Field Line Length (ft)</label>
+        <input type="number" id="fieldLength" value="500">
+    </div>
+</div>
+
+<div class="row">
+    <div>
+        <label>Trench Width (inches)</label>
+        <input type="number" id="trenchWidth" value="36">
+    </div>
+    <div>
+        <label>Trench Depth (inches)</label>
+        <input type="number" id="trenchDepth" value="36">
+    </div>
+</div>
+
+<label>Pipe $ / ft</label>
+<input type="number" id="pipeCost" value="3">
+
+<hr>
+
+<h2>Site Conditions (1 Man + 1 Machine / 4 Day Jobs)</h2>
+
+<label>Base Complexity</label>
+<select id="complexity">
+    <option value="0">Simple</option>
+    <option value="750">Moderate</option>
+    <option value="1500">Difficult</option>
+</select>
+
+<label>Access / Soil</label>
+<select id="access">
+    <option value="0">Normal</option>
+    <option value="750">Limited Access</option>
+    <option value="1500">Rock / Bad Soil</option>
+</select>
+
+<label>
+    <input type="checkbox" id="inspectionHold">
+    Inspection Hold / Finish Day (Skid Steer Staged)
+</label>
+
+<hr>
+
+<h2>Tree Clearing (You Do It)</h2>
+
+<div class="row">
+    <div>
+        <label>Tree Count</label>
+        <input type="number" id="treeCount" value="0">
+    </div>
+    <div>
+        <label>Tree Size</label>
+        <select id="treeSize">
+            <option value="150">6–12"</option>
+            <option value="300">12–24"</option>
+            <option value="500">24"+</option>
+        </select>
+    </div>
+</div>
+
+<hr>
+
+<h2>Rock (Hauled In)</h2>
+
+<div class="row">
+    <div>
+        <label>Rock Tons</label>
+        <input type="number" id="rockTons" value="0">
+    </div>
+    <div>
+        <label>Cost per Ton ($)</label>
+        <input type="number" id="rockCost" value="17">
+    </div>
+</div>
+
+<div class="row">
+    <div>
+        <label>Haul Distance (miles one way)</label>
+        <input type="number" id="haulDistance" value="0">
+    </div>
+    <div>
+        <label>Haul Cost (cents per mile)</label>
+        <input type="number" id="haulRate" value="35">
+    </div>
+</div>
+
+<hr>
+
+<h2>Labor + Equipment</h2>
+
+<label>Labor + Equipment Base Cost ($)</label>
+<input type="number" id="laborCost" value="5200">
+
+<label>Markup %</label>
+<input type="number" id="markup" value="20">
+
+<div class="buttons">
+    <button class="calculate" onclick="calculateQuote()">CALCULATE QUOTE</button>
+    <button class="verbal" onclick="verbalQuote()">VERBAL QUOTE</button>
+</div>
+
+<div class="total" id="totalOutput">$0.00</div>
+</div>
 
 <script>
-const MIN_JOB_PRICE = 9000;
-let photoData = [];
+function calculateQuote() {
 
-document.getElementById("photoUpload").addEventListener("change", function(e){
-    const files = e.target.files;
-    photoData = [];
-    document.getElementById("photoPreview").innerHTML = "";
-    for(let i=0;i<files.length;i++){
-        const reader = new FileReader();
-        reader.onload = function(event){
-            photoData.push(event.target.result);
-            const img = document.createElement("img");
-            img.src = event.target.result;
-            document.getElementById("photoPreview").appendChild(img);
-        };
-        reader.readAsDataURL(files[i]);
-    }
-});
+    const tank = parseFloat(document.getElementById("tankCost").value) || 0;
+    const fieldLength = parseFloat(document.getElementById("fieldLength").value) || 0;
+    const pipeCost = parseFloat(document.getElementById("pipeCost").value) || 0;
 
-function updateLaborEquipmentCost() {
-    let base = 0;
-    switch(document.getElementById("complexity").value) {
-        case "simple": base = 3200; break;
-        case "moderate": base = 4200; break;
-        case "difficult": base = 5600; break;
-        case "extreme": base = 7200; break;
-    }
+    const trenchWidthIn = parseFloat(document.getElementById("trenchWidth").value) || 0;
+    const trenchDepthIn = parseFloat(document.getElementById("trenchDepth").value) || 0;
 
-    let accessAdj = 0;
-    switch(document.getElementById("accessCondition").value) {
-        case "tight": accessAdj = 700; break;
-        case "wet": accessAdj = 1100; break;
-        case "both": accessAdj = 1600; break;
-    }
+    const complexity = parseFloat(document.getElementById("complexity").value) || 0;
+    const access = parseFloat(document.getElementById("access").value) || 0;
 
-    const inspectionCost = document.getElementById("inspectionHold").checked ? 1000 : 0;
+    const inspectionHold = document.getElementById("inspectionHold").checked ? 1000 : 0;
 
-    const treeCount = parseInt(document.getElementById("treeCount").value) || 0;
-    const treeSize = document.getElementById("treeSize").value;
-    let treeRate = 0;
-    if(treeSize === "small") treeRate = 100;
-    if(treeSize === "medium") treeRate = 160;
-    if(treeSize === "large") treeRate = 240;
-    const treeCost = treeCount * treeRate;
+    const treeCount = parseFloat(document.getElementById("treeCount").value) || 0;
+    const treeSizeCost = parseFloat(document.getElementById("treeSize").value) || 0;
+    const treeCost = treeCount * treeSizeCost;
 
     const rockTons = parseFloat(document.getElementById("rockTons").value) || 0;
-    const rockCostPerTon = parseFloat(document.getElementById("rockCostPerTon").value) || 0;
+    const rockCostPerTon = parseFloat(document.getElementById("rockCost").value) || 0;
     const rockMaterial = rockTons * rockCostPerTon;
 
     const haulDistance = parseFloat(document.getElementById("haulDistance").value) || 0;
-    const haulCostPerMile = parseFloat(document.getElementById("haulCostPerMile").value) || 0;
-    const haulCost = haulDistance * 2 * haulCostPerMile;
+    const haulRateCents = parseFloat(document.getElementById("haulRate").value) || 0;
+    const haulRate = haulRateCents / 100;
+    const haulCost = haulDistance * haulRate * 2;
 
-    const total = base + accessAdj + inspectionCost + treeCost + rockMaterial + haulCost;
-    document.getElementById("laborEquipmentCost").value = total.toFixed(2);
-}
-
-function calculateEstimate() {
-    const tank = parseFloat(document.getElementById("tankCost").value) || 0;
-    const field = parseFloat(document.getElementById("fieldLength").value) || 0;
-    const width = parseFloat(document.getElementById("trenchWidth").value) || 0;
-    const depth = parseFloat(document.getElementById("trenchDepth").value) || 0;
-    const pipeRate = parseFloat(document.getElementById("pipeCostPerFoot").value) || 0;
-    const gravelRate = parseFloat(document.getElementById("gravelCostPerYard").value) || 0;
-    const laborEquip = parseFloat(document.getElementById("laborEquipmentCost").value) || 0;
+    const labor = parseFloat(document.getElementById("laborCost").value) || 0;
     const markup = parseFloat(document.getElementById("markup").value) || 0;
 
-    const pipe = field * pipeRate;
-    const yards = (field * width * depth) / 27;
-    const gravel = yards * gravelRate;
+    const pipeTotal = fieldLength * pipeCost;
 
-    let sub = pipe + gravel + laborEquip + tank;
-    let total = sub + (sub * (markup / 100));
+    let subtotal = tank + pipeTotal + complexity + access + inspectionHold + treeCost + rockMaterial + haulCost + labor;
 
-    if(total < MIN_JOB_PRICE) total = MIN_JOB_PRICE;
+    if (subtotal < 9000) subtotal = 9000;
 
-    document.getElementById("breakdown").innerText =
-        `Pipe: $${pipe.toFixed(2)} | Gravel: $${gravel.toFixed(2)} | Labor/Equip: $${laborEquip.toFixed(2)} | Tank: $${tank.toFixed(2)}`;
+    const total = subtotal + (subtotal * (markup / 100));
 
-    document.getElementById("totalResult").innerText = `Total Quote: $${total.toFixed(2)} (Min $9,000 applied)`;
-    document.getElementById("results").style.display = "block";
-
-    buildProposal(total);
+    document.getElementById("totalOutput").innerText = "$" + total.toFixed(2);
 }
 
-function showVerbalQuote() {
-    calculateEstimate();
-    const totalText = document.getElementById("totalResult").innerText;
-    const number = parseFloat(totalText.replace(/[^0-9.]/g,""));
-    const rounded = Math.round(number / 500) * 500;
-    document.getElementById("verbalResult").innerText = `Verbal Quote: $${rounded.toLocaleString()}`;
+function verbalQuote() {
+    calculateQuote();
+    const total = document.getElementById("totalOutput").innerText;
+    alert("Verbal Quote: " + total);
 }
-
-function saveQuote() {
-    const name = document.getElementById("customerName").value || "Unknown";
-    const job = document.getElementById("jobNumber").value || Date.now();
-    const total = document.getElementById("totalResult").innerText;
-
-    localStorage.setItem(`quote_${job}`, JSON.stringify({
-        customer: name,
-        job: job,
-        total: total,
-        photos: photoData,
-        date: new Date().toLocaleString()
-    }));
-
-    alert("Job saved for " + name + " (Job " + job + ")");
-}
-
-function buildProposal(total) {
-    const customer = document.getElementById("customerName").value;
-    const location = document.getElementById("jobLocation").value;
-    const job = document.getElementById("jobNumber").value;
-
-    let photoHtml = "";
-    photoData.forEach(p => {
-        photoHtml += `<img src="${p}" style="max-width:200px;margin:5px;border-radius:4px;">`;
-    });
-
-    const html = `
-        <h2>Septic System Installation Proposal</h2>
-        <p><strong>Customer:</strong> ${customer}</p>
-        <p><strong>Job #:</strong> ${job}</p>
-        <p><strong>Location:</strong> ${location}</p>
-        <hr>
-        <p>This proposal includes all labor, equipment, excavation, tree clearing, rock import, materials, and installation required to complete the septic system per approved plans.</p>
-        <h3>Total Price: $${total.toFixed(2)}</h3>
-        <p>Includes mobilization, mini-ex & skid steer operations, inspection wait handling, and site restoration.</p>
-        <h3>Site Photos</h3>
-        ${photoHtml}
-        <br><br>
-        <p>Authorized Signature: ____________________________ Date: __________</p>
-    `;
-    document.getElementById("proposal").innerHTML = html;
-}
-
-function printProposal() {
-    const proposal = document.getElementById("proposal");
-    proposal.style.display = "block";
-    const w = window.open();
-    w.document.write(proposal.innerHTML);
-    w.print();
-    w.close();
-}
-
-updateLaborEquipmentCost();
 </script>
 
 </body>
