--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     h1 {
         text-align: center;
         color: #facc15;
-        font-size: 34px;
+        font-size: 36px;
         margin-bottom: 20px;
+        letter-spacing: 1px;
     }
 
     .section {
@@ -73,10 +74,10 @@
 
     .total {
         text-align: center;
-        font-size: 28px;
+        font-size: 30px;
         font-weight: bold;
         color: #facc15;
-        margin-top: 15px;
+        margin-top: 20px;
     }
 </style>
 </head>
@@ -117,7 +118,7 @@
 <div class="section">
     <div class="section-title">Hauling</div>
     <input id="haulDistance" type="number" placeholder="Miles One Way">
-    <input id="haulRate" type="number" placeholder="Haul Cost (cents per mile)">
+    <input id="haulRate" type="number" value="35" placeholder="Haul Cost (cents per mile)">
 </div>
 
 <div class="section">
@@ -134,7 +135,7 @@
 <div class="section">
     <div class="section-title">Labor / Site Work / Mobilization</div>
     <input id="laborBase" type="number" placeholder="Base Labor Cost ($)">
-    <input id="markupPercent" type="number" placeholder="Markup %">
+    <input id="markupPercent" type="number" placeholder="Markup % (20–25 typical)">
 </div>
 
 <button class="btn-yellow" onclick="calculateTotal()">CALCULATE TOTAL</button>
@@ -149,24 +150,12 @@ function getVal(id) {
     return parseFloat(document.getElementById(id).value) || 0;
 }
 
-function presetStandard() {
-    document.getElementById("laborBase").value = 20000;
-}
-
-function presetTight() {
-    document.getElementById("laborBase").value = 22500;
-}
-
-function presetLarge() {
-    document.getElementById("laborBase").value = 25000;
-}
-
-function presetHeavy() {
-    document.getElementById("laborBase").value = 27500;
-}
+function presetStandard() { document.getElementById("laborBase").value = 20000; }
+function presetTight() { document.getElementById("laborBase").value = 22500; }
+function presetLarge() { document.getElementById("laborBase").value = 25000; }
+function presetHeavy() { document.getElementById("laborBase").value = 27500; }
 
 function calculateTotal() {
-
     const tank = getVal("tankCost");
     const field = getVal("fieldLength");
     const pipe = getVal("pipeCost");
@@ -200,7 +189,8 @@ function generateCustomerQuote() {
 
     const customer = document.getElementById("customerName").value || "Customer";
     const location = document.getElementById("jobLocation").value || "Job Site";
-    const total = document.getElementById("totalOutput").innerText.replace("$", "");
+    const totalText = document.getElementById("totalOutput").innerText.replace("$", "");
+    const total = parseFloat(totalText);
 
     const deposit = (total * 0.10).toFixed(2);
     const paymentTerms = total > 15000 ? 
@@ -228,7 +218,7 @@ function generateCustomerQuote() {
 
         <p>Scope of Work: Septic system installation including excavation, materials, labor, equipment, and site restoration per approved plans and local codes.</p>
 
-        <h2>Total Project Price: $${total}</h2>
+        <h2>Total Project Price: $${total.toFixed(2)}</h2>
         <p><strong>Deposit to Schedule:</strong> $${deposit}</p>
         <p><strong>Payment Terms:</strong> ${paymentTerms}</p>
 
@@ -239,13 +229,13 @@ function generateCustomerQuote() {
         <div class="line"></div>
         <p>Date</p>
 
-        <script>window.print();</script>
-
         </body>
         </html>
     `);
 
     win.document.close();
+    win.focus();
+    win.print();
 }
 </script>
 
